--- a/DoenerBestellungFE/src/app/auth/login/login.html
+++ b/DoenerBestellungFE/src/app/auth/login/login.html
@@ -30,6 +30,9 @@
       <div class="button-row">
         <button type="button" mat-flat-button color="primary" (click)="register()">Register</button>
       </div>
+      <div class="button-row">
+        <button type="button" mat-flat-button color="primary" (click)="printSessiontoken()">Print SessionToken</button>
+      </div>
     </form>
   </mat-card>
 </div>
