--- a/DoenerBestellungFE/src/app/auth/login/login.html
+++ b/DoenerBestellungFE/src/app/auth/login/login.html
@@ -1,38 +1,20 @@
-<div class="example-container mat-elevation-z8">
-  @if (isLoadingResults){
-    <div class="example-loading-shade">
-        <mat-spinner></mat-spinner>
+  <form [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
+      <input matInput type="username" placeholder="Username" formControlName="username">
+        @if (!loginForm.get('username')!.valid && loginForm.get('username')!.touched) {
+          <span>Please enter your username</span>
+        }
+      <input matInput type="password" placeholder="Password" formControlName="password">
+        @if (!loginForm.get('password')!.valid && loginForm.get('password')!.touched) {
+          <span>Please enter your password</span>
+        }
+    <div class="button-row">
+      <button type="submit" [disabled]="!loginForm.valid">Login</button>
     </div>
-  }
-  <mat-card class="example-card">
-    <form [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
-      <mat-form-field class="example-full-width">
-        <input matInput type="username" placeholder="Username" formControlName="username"
-               [errorStateMatcher]="matcher">
-        <mat-error>
-          @if (!loginForm.get('username')!.valid && loginForm.get('username')!.touched) {
-            <span>Please enter your username</span>
-          }
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Password" formControlName="password"
-               [errorStateMatcher]="matcher">
-        <mat-error>
-          @if (!loginForm.get('password')!.valid && loginForm.get('password')!.touched) {
-            <span>Please enter your password</span>
-          }
-        </mat-error>
-      </mat-form-field>
-      <div class="button-row">
-        <button type="submit" [disabled]="!loginForm.valid" mat-flat-button color="primary">Login</button>
-      </div>
-      <div class="button-row">
-        <button type="button" mat-flat-button color="primary" (click)="register()">Register</button>
-      </div>
-      <div class="button-row">
-        <button type="button" mat-flat-button color="primary" (click)="printSessiontoken()">Print SessionToken</button>
-      </div>
-    </form>
-  </mat-card>
-</div>
+    <div class="button-row">
+      <button type="button" (click)="register()">Register</button>
+    </div>
+    <div class="button-row">
+      <button type="button" (click)="printSessiontoken()">Print SessionToken</button>
+    </div>
+  </form>
+  <p>{{errorMessage}}</p>
